add js calendar

--- a/main/templates/header.html
+++ b/main/templates/header.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset='utf-8' />
         {% load staticfiles %}
+        <script src="{% static 'js/jsCalendar.js' %}"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         {% block meta %}
         {% endblock %}
         <link rel='stylesheet' href="{% static 'css/site.css' %}" />
+        <link rel='stylesheet' href="{% static 'css/jsCalendar.css' %}" />
     </head>
 
     <body>
