--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -18,5 +18,6 @@
     Main Shit
     <a href="{{auth_url}}">Authorize</a>
     <div id='map'></div>
+    <div class='auto-jsCalendar'></div>
 </div>
 {% endblock %}
