update api to return monthly deliveries upon ajax request

--- a/main/templates/add.html
+++ b/main/templates/add.html
@@ -11,6 +11,9 @@
     <label for='name'>Restaurant Name: </label>
     <input id='name-input' type='text' name='name' placeholder='Name'/>
 
+    <label for='name'>Address: </label>
+    <input id='address-input' type='text' name='address' placeholder='Address'/>
+
     <label for='time'>Time Accepted: </label>
     <input id='time-input' type='datetime-local' name='time'/>
 
