--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -23,7 +23,10 @@
         <table class='js-calendar'>
             <tr class='calendar-header'>
                 <td class='calendar-previous'>Previous</td>
-                <td colspan='5'>Calendar</td>
+                <td colspan='5'>
+                    <span class='calendar-month'>Month </span>
+                    <span class='calendar-year'>Year </span>
+                </td>
                 <td class='calendar-next'>Next</td>
             </tr>
             <tr>
